--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "v8pp",
-  "version": "1.5.2",
+  "version": "1.6.0",
   "description": "C++ bindings for V8",
   "keywords": [ "V8", "native", "addon", "module", "bindings" ],
+  "engines": { "node": ">=8.0.0" },
   "main": "include_dirs.js",
   "repository": { "type": "git", "url": "git://github.com/pmed/v8pp.git" },
   "author": "Pavel Medvedev <pmedvedev@gmail.com>",
