use GCC 7.0 in Travis CI for C++17 support

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,16 @@ env:
   - V8_VERSION=6.6
 
 before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo add-apt-repository ppa:pinepain/libv8-archived -y
   - sudo add-apt-repository ppa:pinepain/libv8 -y
   - sudo apt-get update
+  - sudo apt-get install -qq g++-7
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
   - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
 install:
-  - if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
+  #- if [ "$CXX" == "clang++" ]; then export CXXFLAGS="-stdlib=libstdc++"; fi
   
 script: make
 
