turn on conformance mode and warnings Level4 in Visual C++ project properties
Treat includes in angle brackets as external (i.e. #include <v8.h>)
and turn off warnings for such external headers.

Fixed warnings in the code: unused function arguments, wrong initialization,
data conversion.

--- a/common.props
+++ b/common.props
@@ -9,10 +9,12 @@
     <ClCompile>
       <TreatWarningAsError>true</TreatWarningAsError>
       <AdditionalIncludeDirectories>$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4190;4800</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4190</DisableSpecificWarnings>
       <PreprocessorDefinitions>V8PP_ISOLATE_DATA_SLOT=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <WarningLevel>Level3</WarningLevel>
+      <WarningLevel>Level4</WarningLevel>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <ConformanceMode>true</ConformanceMode>
+      <AdditionalOptions>/experimental:external /external:anglebrackets /external:W0 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
 </Project>
