move .ipp files as include in Visual Studio solution

--- a/v8pp/v8pp.vcxproj.filters
+++ b/v8pp/v8pp.vcxproj.filters
@@ -24,11 +24,11 @@
     <ClInclude Include="json.hpp" />
     <ClInclude Include="ptr_traits.hpp" />
     <ClInclude Include="persistent.hpp" />
+    <ClInclude Include="class.ipp" />
+    <ClInclude Include="json.ipp" />
+    <ClInclude Include="throw_ex.ipp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="class.ipp" />
-    <None Include="json.ipp" />
-    <None Include="throw_ex.ipp" />
   </ItemGroup>
 </Project>
