--- a/plugins/packages.config
+++ b/plugins/packages.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="v8.redist-v140-x86" version="7.4.288.11" targetFramework="native" />
-  <package id="v8.redist-v141-x64" version="7.4.288.26" targetFramework="native" />
-  <package id="v8.redist-v141-x86" version="7.4.288.28" targetFramework="native" />
+  <package id="v8.redist-v142-x64" version="8.0.426.28" targetFramework="native" />
   <package id="v8.redist-v142-x86" version="7.5.288.23" targetFramework="native" />
-  <package id="v8-v140-x86" version="7.4.288.11" targetFramework="native" />
-  <package id="v8-v141-x64" version="7.4.288.26" targetFramework="native" />
-  <package id="v8-v141-x86" version="7.4.288.28" targetFramework="native" />
+  <package id="v8.symbols-v142-x64" version="8.0.426.28" targetFramework="native" />
+  <package id="v8.symbols-v142-x86" version="7.5.288.23" targetFramework="native" />
+  <package id="v8-v142-x64" version="8.0.426.28" targetFramework="native" />
   <package id="v8-v142-x86" version="7.5.288.23" targetFramework="native" />
 </packages>
