--- a/v8pp/v8pp.vcxproj
+++ b/v8pp/v8pp.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="convert.cpp" />
     <ClCompile Include="json.cpp" />
     <ClCompile Include="throw_ex.cpp" />
+    <ClCompile Include="version.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="call_from_v8.hpp" />
@@ -50,12 +51,14 @@
     <ClInclude Include="ptr_traits.hpp" />
     <ClInclude Include="throw_ex.hpp" />
     <ClInclude Include="utility.hpp" />
+    <ClInclude Include="version.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="class.ipp" />
     <None Include="json.ipp" />
     <None Include="packages.config" />
     <None Include="throw_ex.ipp" />
+    <None Include="version.ipp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{2E6CFC3D-5A08-4909-8D1A-3469063D169B}</ProjectGuid>
