--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ macOS-latest ]
+        os: [ ubuntu-latest, macOS-latest ]
         build_type: [ Release, Debug ]
         shared_lib: [ BUILD_SHARED_LIBS=TRUE, BUILD_SHARED_LIBS=FALSE ]
         header_only: [ V8PP_HEADER_ONLY=TRUE, V8PP_HEADER_ONLY=FALSE ]
@@ -19,12 +19,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install V8 PPA
+    - name: Install V8 apt 
       if: startsWith(matrix.os, 'ubuntu')
-      run: |
-        sudo add-apt-repository ppa:pinepain/libv8 -y
-        sudo apt-get update -q
-        sudo apt-get install libv8-6.6-dev -y
+      run: sudo apt install libv8-dev -y
 
     - name: Install V8 brew
       if: startsWith(matrix.os, 'macOS')
