--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,6 +27,7 @@ target_link_libraries(v8pp_test v8pp)
 add_test(v8pp_test v8pp_test --version --run-tests)
 
 if(BUILD_SHARED_LIBS)
+	target_link_libraries(v8pp_test ${CMAKE_DL_LIBS})
 	file(GLOB JS_TESTS *.js)
 	add_test(v8pp_js_test v8pp_test --lib-path ${PROJECT_BINARY_DIR}/plugins ${JS_TESTS})
 endif()
