add v8_compress_pointers to CI matrix
(cherry picked from commit 77eff4f3e6b9c140b1f94c94f15935b4b5f84582)

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,10 +12,19 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macOS-latest ]
         build_type: [ Release, Debug ]
-        shared_lib: [ BUILD_SHARED_LIBS=TRUE, BUILD_SHARED_LIBS=FALSE ]
-        header_only: [ V8PP_HEADER_ONLY=TRUE, V8PP_HEADER_ONLY=FALSE ]
+        shared_lib: [ false, true ]
+        header_only: [ false, true ]
+        v8_compress_pointers: [ false, true ]
+        exclude:
+          - os: ubuntu-latest
+            v8_compress_pointers: true
+          - os: macOS-latest
+            v8_compress_pointers: false
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{matrix.os}}
+
+    name: '${{matrix.os}} ${{matrix.build_type}} shared_lib=${{matrix.shared_lib}} header_only=${{matrix.header_only}} v8_compress_pointers=${{matrix.v8_compress_pointers}}'
+
     steps:
     - uses: actions/checkout@v2
 
@@ -31,7 +40,7 @@ jobs:
       uses: seanmiddleditch/gha-setup-ninja@v3
 
     - name: Configure CMake
-      run: cmake -G Ninja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DBUILD_TESTING=TRUE -D${{matrix.shared_lib}} -D${{matrix.header_only}}
+      run: cmake -G Ninja -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DBUILD_TESTING=TRUE -DBUILD_SHARED_LIBS=${{matrix.shared_lib}} -DV8PP_HEADER_ONLY=${{matrix.header_only}} -DV8_COMPRESS_POINTERS=${{matrix.v8_compress_pointers}}
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{matrix.build_type}}
