always link dl to `v8pp_test`
because it also uses v8pp/context.cpp in header-only mode

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,12 +23,11 @@ if(V8PP_HEADER_ONLY)
 	target_sources(v8pp_test PRIVATE ${PROJECT_SOURCE_DIR}/v8pp/context.cpp)
 endif()
 
-target_link_libraries(v8pp_test v8pp)
+target_link_libraries(v8pp_test v8pp ${CMAKE_DL_LIBS})
 
 add_test(v8pp_test v8pp_test --version --run-tests)
 
 if(BUILD_SHARED_LIBS)
-	target_link_libraries(v8pp_test ${CMAKE_DL_LIBS})
 	file(GLOB JS_TESTS *.js)
 	add_test(v8pp_js_test v8pp_test --lib-path ${PROJECT_BINARY_DIR}/plugins ${JS_TESTS})
 endif()
